# kvotolovac

./: .gitignore  README.md  run-all.sh  run-backend.sh  run-frontend.sh
.github/: copilot-instructions.md
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: _params.py  canonical_teams.py  discrepancies.py  matches.py  matching_review.py  router.py  scraper_benchmarks.py  status.py  team_review.py  unresolved_odds.py
backend/app/data/: league_registry.json  team_registry.json
backend/app/models/: database.py  schemas.py
backend/app/scrapers/: admiralbet_scraper.py  balkanbet_scraper.py  base.py  http_client.py  maxbet_scraper.py  meridian_scraper.py  merkurxtip_scraper.py  mock_scraper.py  mozzart_scraper.py  oktagonbet_scraper.py  pinnbet_scraper.py  registry.py
backend/app/services/: analyzer.py  league_registry.py  normalizer.py  notifications.py  scheduler.py  scraper_benchmarks.py  team_registry.py  team_seed_data.py  text_normalizer.py
backend/app/store/: odds_store.py
backend/tests/: conftest.py  test_admiralbet_scraper.py  test_analyzer.py  test_api.py  test_balkanbet_scraper.py  test_http_client.py  test_main.py  test_match_merge.py  test_maxbet_scraper.py  test_meridian_scraper.py  test_merkurxtip_scraper.py  test_mozzart_scraper.py  test_normalizer.py  test_normalizer_regressions.py  test_notifications.py  test_oktagonbet_scraper.py  test_pinnbet_scraper.py  test_scheduler.py  test_scraper.py  test_scraper_benchmarks.py  test_store.py  test_text_normalizer.py
(+62 files in other folders)
